New DatabaseLibrary layer
Prep for consumption of mapping service (user-facing) project with a
shared data layer

--- a/adminconsole/adminconsole.csproj
+++ b/adminconsole/adminconsole.csproj
@@ -28,4 +28,8 @@
     <Folder Include="wwwroot\media\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DatabaseLibrary\DatabaseLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
